tests/paczka2/big_fuzzy/50941140.err
Error in line 5: rbPBD10 A970 9,2
Error in line 18: CGrR A989 139,9
Error in line 19: rbPBD10 A410 39,5
Error in line 44: yKL A125 43,3
Error in line 41: CGrR A970 256,9
Error in line 56: isnIYGGG A970 44,32
Error in line 55: VaWCg A410 3,0
Error in line 53: CGrR A989 60,1
Error in line 61: CGrR A125 77,5
Error in line 65: CGrR A410 71,1
Error in line 66: yKL A980 29,8
Error in line 73: yKL A970 66,5
Error in line 72: A970 A970 10,7
Error in line 74: yKL A125 29,9
Error in line 50: isnIYGGG A970 28,7
Error in line 68: 47rHp A410 62,5
Error in line 78: isnIYGGG A989 21,5
Error in line 81: isnIYGGG A410 88,8
Error in line 83: isnIYGGG A989 72,2
Error in line 89: 47rHp A125 69,68
Error in line 71: rbPBD10 A970 1,0
Error in line 94: isnIYGGG A410 2,2
Error in line 103: A970 A970 97,7
Error in line 112: yKL A125 44,28
Error in line 113: rbPBD10 A410 18,81
Error in line 119: rbPBD10 A410 90,1
Error in line 116: VaWCg A125 24,4
Error in line 122: VaWCg A989 40,0
Error in line 139: 47rHp A125 60,5
Error in line 145: 47rHp A970 12,1
Error in line 151: A970 A989 66,2
Error in line 158: A970 A410 07,7
Error in line 157: A970 A410 10,2
Error in line 169: isnIYGGG A125 67,7
Error in line 162: 47rHp A125 22,3
Error in line 144: rbPBD10 A970 364,8
Error in line 173: 47rHp A970 96,9
Error in line 182: rbPBD10 A125 72,8
Error in line 185: rbPBD10 A410 80,4
Error in line 184: 47rHp A989 91,0
Error in line 180: CGrR A410 89,4
Error in line 194: VaWCg A410 50,5
Error in line 190: CGrR A989 53,7
Error in line 210: CGrR A970 59,6
Error in line 211: CGrR A989 73,8
Error in line 221: A970 A989 63,95
Error in line 223: A970 A410 67,7
Error in line 229: 47rHp A970 223,0
